# pyctp

./: .gitignore  README.md  pyctp.sln
demo/: md_demo.py  md_demo_v2.py  pyctp.pyd  td_demo.py
demo/flow/td/: Private.con  Public.con
generator/: class_.py  data_type.py  struct.py
pyctp/: CMakeLists.txt  CMakeSettings.json  data_types.cpp  encoding.h  main.cpp  mduserapi.cpp  mduserapi.h  pyctp.vcxproj  pyctp.vcxproj.filters  structs.cpp  traderapi.cpp  traderapi.h  utils.h
pyctp/generator/: _def_CMduserHandler_pybind11.txt  _def_CThostFtdcMdApi.txt  _def_CThostFtdcMdSpi_pybind11.txt  _def_CThostFtdcTraderApi.txt  _def_CThostFtdcTraderSpi_pybind11.txt  _def_CTraderHandler_pybind11.txt  _def_dtypes.txt  _def_structs.txt  struct.py
pyctp/include/: encoding.h  mduserapi.h  traderapi.h
pyctp/src/: data_types.cpp  encoding.h  main.cpp  md_api.cpp  md_spi.cpp  mduserapi.cpp  structs.cpp  td_api.cpp  td_spi.cpp  traderapi.cpp
